--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim-linux-coding-style"]
 	path = vim-linux-coding-style
 	url = https://github.com/vivien/vim-linux-coding-style
+[submodule "vim-tmux"]
+	path = vim-tmux
+	url = git://github.com/tmux-plugins/vim-tmux.git
