--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "robotframework-vim"]
 	path = robotframework-vim
 	url = git://github.com/mfukar/robotframework-vim.git
+[submodule "rust.vim"]
+	path = rust.vim
+	url = https://github.com/rust-lang/rust.vim.git
